# various-cplusplus

./: .gitignore  README.md
UartCom/: Makefile  UartApplication.cpp  UartApplication.h  UartCom.cpp  UartCom.h  UartComIF.h  VirtualUart.cpp  VirtualUart.h  VirtualUart1.cpp  VirtualUart1.h  VirtualUart2.cpp  VirtualUart2.h  main.cpp  uart-com-sim.cpp  uart-com.cpp  virtual-uart-manager.cpp
benchmark/: DateClass.cpp  DateClass.h  DateClass2.cpp  DateClass2.h  Makefile  bench.cpp  bench2.cpp  dateTest.cpp
boost/: example.cpp
cli/: CommandLineInterface.cpp  CommandLineInterface.h  manualCli.cpp  readlineCli.cpp
cmake-test/: CMakeLists.txt
commandMapping/: main.cpp
gtest/: CMakeLists.txt  README.md  hello_test.cc
pid/: Controller.h  FirstOrderSystem.cpp  FirstOrderSystem.h  Makefile  MassSpringDamper.cpp  MassSpringDamper.h  OpenLoop.cpp  OpenLoop.h  Pid.cpp  Pid.h  SecondOrderSystem.cpp  SecondOrderSystem.h  SetpointGenerator.cpp  SetpointGenerator.h  Simulator.cpp  Simulator.h  System.h  data.txt  main.cpp  ramp.cpp
protobuf/: README.md  load_person.cpp  person.proto  save_person.cpp  testTimestamp.py
serial-claude/: CommandHandler.cpp  CommandHandler.h  CommandLine.cpp  CommandLine.h  FastLogger.cpp  FastLogger.h  FrameInterpreter.cpp  FrameInterpreter.h  Makefile  SerialConnection.cpp  SerialConnection.h  main.cpp
serial-log/: CommandHandler.cpp  CommandHandler.h  (+19 more)
serial-rt/: CMakeLists.txt  CommandHandlerRt.cpp  CommandHandlerRt.h  FrameBuilderRt.cpp  FrameBuilderRt.h  FrameInterpreterRt.cpp  FrameInterpreterRt.h  LoggerRt.cpp  LoggerRt.h  Makefile  README.md  RtDefinitions.h  RtInterface.cpp  RtInterface.h  SerialConnection.cpp  SerialConnection.h  SerialConnectionRt.cpp  SerialConnectionRt.h  StMpcDefinitions.h  mainRtIf.cpp  plot.py  slope.py  temp.py
(+59 files in other folders)
